--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@astrojs/tailwind": "^3.0.1",
     "astro": "^2.0.8",
     "astro-icon": "^0.8.0",
+    "astro-robots-txt": "^0.3.11",
+    "astro-seo-schema": "^2.0.0",
     "tailwindcss": "^3.2.4"
   }
 }
