--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "astro": "^2.0.8",
     "astro-icon": "^0.8.0",
     "astro-robots-txt": "^0.3.11",
+    "astro-seo": "^0.7.0",
     "astro-seo-schema": "^2.0.0",
     "tailwindcss": "^3.2.4"
   }
