--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "@astrojs/image": "^0.14.1",
     "@astrojs/netlify": "^2.1.2",
+    "@astrojs/svelte": "^2.1.0",
     "@astrojs/tailwind": "^3.0.1",
-    "astro": "^2.0.8",
+    "astro": "^2.3.0",
     "astro-icon": "^0.8.0",
     "astro-robots-txt": "^0.3.11",
     "astro-seo": "^0.7.0",
     "astro-seo-schema": "^2.0.0",
+    "daisyui": "^2.51.5",
+    "svelte": "^3.58.0",
     "tailwindcss": "^3.2.4"
   }
 }
